# fabricaNode-BackEnd

./: README.md  pyproject.toml
config/: settings.py  urls.py
core/fabricaNode/: admin.py  apps.py  authentication.py
core/fabricaNode/migrations/: 0001_initial.py  0004_alter_area_nome_alter_subarea_nome.py
core/fabricaNode/models/: __init__.py  area.py  cidade.py  publicacao.py  subarea.py  user.py
core/fabricaNode/serializers/: __init__.py  area.py  autor.py  cidade.py  editora.py  estado.py  keyword.py  pais.py  publicacao.py  publicacao_keyword.py  subarea.py  user.py
core/fabricaNode/views/: area.py  autor.py  cidade.py  editora.py  estado.py  keyword.py  pais.py  publicacao.py  publicacao_keyword.py  subarea.py  user.py
core/usuario/: admin.py  apps.py  authentication.py  managers.py  models.py  router.py  views.py
core/usuario/migrations/: 0001_initial.py
fabricaNode/: admin.py  apps.py  models.py
fabricaNode/migrations/: 0001_initial.py  0002_area_subarea_autor_subarea.py  0003_alter_publicacao_editora.py
fabricaNode/models/: __init__.py  area.py  autor.py  cidade.py  editora.py  estado.py  keyword.py  pais.py  publicacao.py  publicacao_keyword.py  subarea.py
fabricaNode/serializers/: __init__.py  area.py  autor.py  cidade.py  editora.py  estado.py  keyword.py  pais.py  publicacao.py  publicacao_keyword.py  subarea.py
fabricaNode/views/: __init__.py  area.py  autor.py  cidade.py  editora.py  estado.py  keyword.py  pais.py  publicacao.py  publicacao_keyword.py  subarea.py
