[project]
name = "fabricaNode"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "fabricaDeSoftware", email = "fabio.moura@ifc.edu.br"},
]
dependencies = [
    "django>=5.0.4",
    "djangorestframework>=3.15.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
